# 10-herencia-polim-salario-herencia_anamunoz

./: CMakeLists.txt  main.cpp
src/Model/: DesarolladorSenior.cpp  DesarolladorSenior.h  DesarrolladorJunior.cpp  DesarrolladorJunior.h  Empleado.cpp  Empleado.h  LiderTecnico.cpp  LiderTecnico.h  SistemaNomina.cpp  SistemaNomina.h  Tester.cpp  Tester.h
src/View/: View.cpp  View.h
